<resources>
    <string name="app_name">Qatrat dem</string>
    <string name="wait">Please wait..</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="login_in">Login in..</string>
    <string name="checking_user">Checking user information..</string>
    <string name="log_in">Login</string>
    <string name="recover">Recover</string>
    <string name="sending_instructions">Sending instructions to your email</string>
    <string name="instructions_sent">Instructions were successfully sent to your email, please check your inbox to proceed</string>
    <string name="email">Email Address</string>
    <string name="fullname">Fullname</string>
    <string name="phone_number">Phone number</string>
    <string name="wilaya">Wilaya</string>
    <string name="dayra">Dayra</string>
    <string name="gender">Gender</string>
    <string name="user_type">User type</string>
    <string name="blood_type">Blood type</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (cm)</string>
    <string name="diseases_sens">Diseases or sensibilities?</string>
    <string name="dis_sens">Diseases and sensibilities</string>
    <string name="previous_donations">Any previous donations?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confrim password</string>
    <string name="signup">Sign up</string>
    <string name="birth_date">Birth date</string>
    <string name="enter_valid_name">Please enter a valid name</string>
    <string name="enter_valid_phone">Please enter a valid phone number</string>
    <string name="short_password">Password length must be longer than 6 characters !</string>
    <string name="unmatched_passwords">Passwords do not match !</string>
    <string name="enter_location">Please specify your current location</string>
    <string name="your_gender">Your gender?</string>
    <string name="your_type">You are:</string>
    <string name="enter_valid_ibm">Please enter a valid height and weight ( numbers only allowed )</string>
    <string name="creating_account">Creating your account..</string>
    <string name="saving_info">Saving your information..</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_image">Chose a picture:</string>
    <string name="location_needed">Please enable location to locate your current position</string>
    <string name="camera_required">To take pictures please grant access to camera</string>
    <string name="storage_required">Storage access is required to select pictures from gallery</string>
    <string name="enable_location">Please enable location detection !</string>
    <string name="your_blood">Your blood:</string>
    <string name="forgot_password_msg">Need to reset your password? No problem! Just enter your email and click on \"Recover\", we\'ll email instructions for setting a new one</string>
    <string name="send">Send</string>
    <string name="enter_gender">Please specify your gender</string>
    <string name="enter_type">Please specify your type</string>
    <string name="chose_source">Chose a source</string>
    <string name="donners">Donners</string>
    <string name="patients">Patients</string>
    <string name="make_request">Make request</string>
    <string name="location">Location</string>
    <string name="user_details">User details</string>
    <string name="personal_info">Personal Information</string>
    <string name="contact_info">Contact information</string>
    <string name="this_is_desc">This is description...</string>
    <string name="prev_donations">Previous donations</string>
    <string name="btn_text">Button text</string>
    <string name="done">Done</string>
    <string-array name="genders">
        <item name="N/A">Not specified</item>
        <item name="male">Male</item>
        <item name="female">Female</item>
    </string-array>
    <string-array name="user_type">
        <item name="donner">Donner</item>
        <item name="patient">Patient</item>
        <item name="both">Both</item>
    </string-array>
    <string-array name="blood_type">
        <item name="o_plus">O+</item>
        <item name="o_minus">O-</item>
        <item name="a_plus">A+</item>
        <item name="a_minus">A-</item>
        <item name="b_plus">B+</item>
        <item name="b_minus">B-</item>
        <item name="ab_plus">AB+</item>
        <item name="ab_minus">AB-</item>
    </string-array>
</resources>