<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="8dp"
            android:background="@drawable/shape_rec_01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:src="@drawable/ic_down_arrow_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fullnameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_details"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pictureIV"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle_primary"
            android:padding="4dp"
            android:src="@drawable/ic_person_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_type"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pictureIV" />

        <TextView
            android:id="@+id/bloodTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/blood_type"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeTV" />

        <LinearLayout
            android:id="@+id/persoInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloodTypeTV"
            tools:layout_editor_absoluteY="128dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/personal_info"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:text="@string/location"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_location_grey" />

            <TextView
                android:id="@+id/birthDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:text="@string/birth_date"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_birth_date_grey" />

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:text="@string/gender"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_gender_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heightTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/height"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:drawableStartCompat="@drawable/ic_height_grey" />

                <TextView
                    android:id="@+id/weightTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/height"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:drawableStartCompat="@drawable/ic_weight_grey" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contactLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/persoInfoLayout"
            tools:layout_editor_absoluteY="128dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/contact_info"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:text="@string/phone_number"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_phone_grey" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:text="@string/email"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_email_grey" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/diseasesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactLayout"
            tools:layout_editor_absoluteY="128dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/dis_sens"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diseasesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.75"
                android:text="@string/this_is_desc"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/donationsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diseasesLayout"
            tools:layout_editor_absoluteY="128dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/prev_donations"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/donationsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.75"
                android:text="@string/this_is_desc"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>